Updating readme and notebook

--- a/Kenya-Bioacoustics-Random-Forests.ipynb
+++ b/Kenya-Bioacoustics-Random-Forests.ipynb
@@ -10,17 +10,35 @@
     "\n",
     "These audio data were collected using a low cost Raspberry Pi based recorder and are available on [Data Dryad]( http://dx.doi.org/10.5061/dryad.69g60). The recordings are described in the paper [\"A Bioacoustic Record of a Conservancy in the Mount Kenya Ecosystem.\"](https://bdj.pensoft.net/articles.php?id=9906)\n",
     "\n",
-    "## Download Data"
+    "## Download Data\n",
+    "\n",
+    "We first download the 2701 recordings in mp3 format and a text file describing the data. All the data will be stored in the 'data' directory (770 MB)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import urllib.request\n",
+    "import os\n",
+    "import zipfile\n",
+    "\n",
+    "files_downloaded=os.listdir('data/')\n",
+    "data_readme_url='http://datadryad.org/bitstream/handle/10255/dryad.125720/README.txt?sequence=1'\n",
+    "if 'README' not in files_downloaded:\n",
+    "    urllib.request.urlretrieve(data_readme_url,'data/README')\n",
+    "data_url='http://datadryad.org/bitstream/handle/10255/dryad.125720/DeKUWC-Recordings-DataPackage-2016.zip?sequence=2'\n",
+    "if 'DeKUWC_Recordings_DataPackage_2016.zip' not in files_downloaded:\n",
+    "    urllib.request.urlretrieve(data_url,'data/DeKUWC_Recordings_DataPackage_2016.zip')\n",
+    "\n",
+    "#unzip\n",
+    "datafile=zipfile.ZipFile('data/DeKUWC-Recordings-DataPackage-2016.zip', 'r')\n",
+    "datafile.extractall('data/dekuwc')\n",
+    "datafile.close()\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -48,7 +66,6 @@
     "import scipy.io.wavfile\n",
     "import librosa\n",
     "import librosa.display\n",
-    "import urllib.request\n",
     "import pandas as pd\n",
     "import os\n",
     "import json\n",
@@ -60,14 +77,10 @@
     "from sklearn.preprocessing import label_binarize\n",
     "from sklearn.metrics import roc_curve,auc\n",
     "from tabulate import tabulate\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.multiclass import OneVsRestClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import average_precision_score\n",
-    "from sklearn import svm\n",
-    "import oskmeans as skm\n",
     "import csv\n",
-    "import random\n",
     "import time\n",
     "\n",
     "np.random.seed(123)#for reproducibility\n",
@@ -122,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For each of the species, we will examine xeno-canto and determine if there are more than 10 recordings deposited on the website which are jugded to be of quality C or better on an A-E scale. If this is the case, we will download the data and use it to train models. Each time this is run it may download recent uploads."
+    "For each of the species, we will examine xeno-canto and determine if there are more than 10 recordings deposited on the website. We download all recordings regardless quality. If this is the case, we will download the data and use it to train models. Each time this is run it may download recent uploads."
    ]
   },
   {
@@ -131,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir='/home/ciira/Documents/Research/BiodiversityMonitoring/repo/acoustic-species-detection/data/mp3/'\n",
+    "data_dir='data/xeno_canto/mp3/'\n",
     "#get recordings already present\n",
     "XC_file=os.listdir(data_dir)\n",
     "min_rec=10\n",
@@ -196,10 +209,10 @@
    },
    "outputs": [],
    "source": [
-    "mp3_dir = 'data/mp3/'\n",
-    "wav_dir = 'data/wav-16kHz/'\n",
+    "mp3_dir = 'data/xeno_canto/mp3/'\n",
+    "wav_dir = 'data/xeno_canto/wav-16kHz/'\n",
     "mp3s=os.listdir(mp3_dir)\n",
-    "wavs=os.listdir('data/wav-16kHz/')\n",
+    "wavs=os.listdir('data/xeno_canto/wav-16kHz/')\n",
     "\n",
     "for filename in mp3s:\n",
     "    if filename.split('.')[0]+'.wav' not in wavs:\n",
